--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
     <application
-        android:name=".KActionsApplication"
+        android:name=".kntfyApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_kactions"
-        android:label="@string/app_name"
+        android:label="kntfy"
         android:roundIcon="@drawable/ic_kactions"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat">
